<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QEdit</string>
    <string name="app_label">QEdit</string>

    <string name="app_name_full">QEdit (Text Editor)</string>

    <!--  -->
    <string name="permission_internal">QEdit Internal Permission</string>

    <!-- Titles -->
    <string name="title_editor">QEdit - %1$s</string>
    <string name="title_editor_dirty">QEdit - %1$s *</string>
    <string name="title_editor_readonly">QEdit - [%1$s]</string>
    <string name="title_save_as">QEdit - Save as ... </string>
    <string name="title_open">QEdit - Open File</string>

    <string name="title_open_recent">QEdit - Open Recent</string>
    <string name="title_settings">QEdit - Settings </string>
    <string name="title_about">QEdit - About ... </string>
    <string name="title_font">QEdit - Text Font </string>

    <!-- Config screen strings -->
    <string name="config_cat_display">Display</string>
    <string name="config_cat_other">Other</string>
    <string name="config_cat_save">Saving</string>
    <string name="config_cat_undo">Undo</string>
    <string name="config_cat_search">Search</string>
    <string name="config_cat_misc">Miscellaneous</string>
    <string name="config_title_line_numbers">Show line numbers</string>
    <string name="config_title_word_wrap">Word wrap</string>
    <string name="config_title_font">Change text font</string>
    <string name="config_title_text_size">Text size</string>
    <string name="config_title_color_theme">Color theme</string>
    <string name="config_title_end_of_lines">End of lines</string>
    <string name="config_title_max_recent">Maximum recent files</string>
    <string name="config_title_search_wrap">Search wrap</string>
    <string name="config_title_search_match_case">Search match case</string>
    <string name="config_title_encoding">Encoding</string>
    <string name="config_title_scroll_fling">Fling to scroll faster</string>
    <string name="config_title_allow_undo_stack">Allow undo</string>
    <string name="config_title_max_undo_stack">Maximum undo history</string>
    <string name="config_title_back_to_undo">Use the back button to undo previous modifications</string>
    <string name="config_title_use_home_page">Use a default file</string>
    <string name="config_title_auto_save">Auto Save</string>
    <string name="config_title_auto_save_overwrite">Overwrite existing files</string>
    <string name="config_summary_auto_save">Automatically saves the file being edited when the app goes in background</string>
    <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
    <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
    <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
    <string name="config_summary_use_home_page">Select a file to open when you launch QEdit from your home screen</string>
    <string name="config_summary_auto_save_overwrite_on">Auto save will overwrite existing files</string>
    <string name="config_summary_auto_save_overwrite_off">Auto save will only work with new files</string>

    <!-- Options Menu in QEdit -->
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_recent">Recent files</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save as</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_quit">Quit</string>

    <!-- Misc UI strings -->
    <string name="ui_save_text">"Do you want to save your document? \nAny unsaved changes will be lost. "</string>
    <string name="ui_save">Save</string>
    <string name="ui_delete">Delete</string>
    <string name="ui_no_save">"Don't save"</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_hint_file_name">File name</string>
    <string name="ui_hint_search">Search</string>
    <string name="ui_art_licence">Artistic Licence</string>
    <string name="ui_history">History</string>
    <string name="ui_force_read_only">Open as read only</string>
	<string name="about_content">QEdit is a text editor for android tablets and phones, besides text edit, it can make python / HTML development on android more fun and convenient especially.</string>

    <!-- Misc Strings -->
    <string name="lorem_ipsum">"QEdit is a great script editor."</string>

    <string name="info_select">Open</string>
    <string name="info_go">Run</string>
    <string name="info_help">Help</string>
    <string name="info_recent">Recent files...</string>

    <string name="cannot_edit">Can not edit</string>
    <string name="cannot_save">Can not save</string>
    <string name="cannot_empty">File content must not be empty</string>

    <string name="confirm_save">Confirm to overwrite</string>
    <string name="info_new">New</string>
    <string name="dir_new">New directory</string>
    <string name="dir_exists">The directory exists</string>
    <string name="cannot_foward">Can not go back</string>
    <string name="file_exists">File exists, please rename</string>
	<string name="search_hint"></string>    

	<string name="video_src">Video {0}</string>
	<string name="play_video">Play</string>
	<string name="no_videos_found">No videos found in this page</string>
	<string name="play_from_website">Videos website</string>
	<string name="pls_install_a8_play">Please install A8 Video Player first</string>
	<string name="download_as">Download and save as</string>
	<string name="info_browser">QBrowser</string>    
	<string name="pls_open_file">No file yet</string>

	<string name="support_intro">It\'s not Python / HTML file</string>
	<string name="pls_install_ext_plg">Please install the QPython Plugin</string>
	
	<!--  added by kyle -->
	<string name="find">find</string>
	<string name="share">Share</string>
	<string name="line_picker_title">Go to Line</string>
	<string name="line_picker_hint">Line number less than </string>
	<string name="code_snippets">Code Snippets</string>
	<string name="save_as_snippets">Save as snippet</string>
	<string name="snippet_confirm">Snippet exists, confirm to override ?</string>
	<string name="save_as_snippets_1">Snippets has been saved as: </string>
	<string name="fail_to_insert">Fail to insert snippet</string>
	<string name="fail_to_goto">Please input correct number</string>
	<string name="max_lines_num_with_syntax_title">Auto-highlight lines</string>
	<string name="max_lines_num_with_syntax_summary">Auto-highlight if lines less than %s</string>
	<string name="qedit_not_support">QEdit only support to preview/execute the following file types\n.py, .sh, .lua, .html, .md.</string>
	<string name="qedit_save_first">Please save the file</string>
	<string name="private4qe_version">100.00</string>

	<string name="pls_install_lua">Please install the QLua to run lua script</string>
	<string name="pls_install_qpy">Please install the QPython to run python script</string>
	<string name="info_snippets">Snippets</string>
	<string name="info_project_type">New ...</string>
	<string name="file_new">New script</string>
	<string name="script_name_cannot_empty">Script name could not be empty</string>
	<string name="project_new">New Project</string>
	<string name="project_name_cannot_empty">You must input project name</string>
	<string name="project_has_been_created">Project has been created, you are editing the {0}</string>
	<string name="script_has_been_created">Script has been created, you are editing the {0}</string>
	<string name="script_name_should_be_py_ext">Script file name should be end-with ".py"</string>

 	<string name="qedit_loading">QEdit is launching ...</string>

    <string name="ui_ok">OK</string>
    <string name="ui_yes">Yes</string>
    <string name="ui_no">No</string>
    <string name="ui_contact_title">Contact</string>
    <string name="ui_licence_title">Licence</string>
    <string name="ui_mail">android@xgouchet.fr</string>
    <string name="ui_choose_mail">Open mail using &#8230; </string>
    <string name="ui_market_url">"https://market.android.com/developer?pub=Xavier+Gouchet"</string>
    <string name="ui_market_app_url">"https://play.google.com/store/apps/details?id=%s"</string>
    <string name="ui_market">"Take a look at my other apps"</string>
    <string name="ui_app_rating">"Rate this app \n Leave a feedback"</string>
    <string name="ui_feedback">"Please feel free to contact me for any feedback, feature request or bug report. "</string>
    <string name="ui_licence_content">"This software is provided 'as-is', without any express or implied warranty.  In no event will the author be held liable for any damages arising from the use of this software."</string>
    <string name="ui_art_licence_title">Artistic Licence</string>
    <string name="ui_art_licence_content">"All icons for this app were created and belong to the author of the app : Xavier Gouchet (android@xgouchet.fr)."</string>
    <string name="ui_whats_new">"What's new"</string>
    <string name="save">保存</string>
    <string name="save_as">另存为</string>
    <string name="recent">最近打开</string>
    <string name="open">打开</string>
    <string name="file_name">File Name</string>
    <string name="file_exist_hint">This file is exist, please rename.</string>
    <string name="script">脚本</string>
    <string name="empty_file">空白文件</string>
    <string name="webapp_project">WebApp(Project)</string>
    <string name="console_app_project">ConsoleApp(Project)</string>
    <string name="kivy_app_project">KivyApp(Project)</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="new_project">新建项目</string>
    <string name="error_dont_kn">Some error occurred.</string>
    <string name="project_name">项目名</string>
    <string name="jump_to">转至某行</string>
    <string name="line_too_large">Can\'t find this line</string>
    <string name="choose_ttf">选择字体文件(.ttf)</string>
    <string name="explorer">文件夹</string>
    <string name="undo">UNDO</string>
    <string name="new_script">新建脚本</string>
    <string name="enter_name_hint">请输入文件名</string>
</resources>
