<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#FF595959"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_blank_file"
            style="@style/dialog_item"
            android:text="@string/empty_file"/>

        <TextView
            android:id="@+id/tv_script"
            style="@style/dialog_item"
            android:text="@string/script"/>

        <TextView
            android:id="@+id/tv_web_app"
            style="@style/dialog_item"
            android:text="@string/webapp_project"/>

        <TextView
            android:id="@+id/tv_console_app"
            style="@style/dialog_item"
            android:text="@string/console_app_project"/>

        <TextView
            android:id="@+id/tv_kivy_app"
            style="@style/dialog_item"
            android:text="@string/kivy_app_project"/>
    </LinearLayout>
</layout>