<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_root"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:paddingLeft="5dp"
            >

            <ImageView
                android:id="@+id/iv_save_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_editor_save"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_save_icon"
                android:text="@string/save"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/iv_save_icon"
                android:background="@color/divide_line"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_saveas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:paddingLeft="5dp"
            >

            <ImageView
                android:id="@+id/iv_saveas_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_editor_saveas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_saveas_icon"
                android:text="@string/save_as"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/iv_saveas_icon"
                android:background="@color/divide_line"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_recent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:paddingLeft="5dp"
            >

            <ImageView
                android:id="@+id/iv_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_editor_recent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_recent"
                android:text="@string/recent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/iv_recent"
                android:background="@color/divide_line"/>
        </RelativeLayout>
    </LinearLayout>
</layout>